--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <body>
   <div class="card-container">
     <div class="card-hero">
-      <img class="card-hero-img" src="./images/image-equilibrium.jpg" alt="artwork of a cube balancing on one corner">
+      <img class="card-hero-img" src="./images/image-equilibrium.jpg" alt="NFT artwork">
       <div class="card-overlay">
         <img src="./images/icon-view.svg" alt="eye icon" class="card-overlay-icon">
       </div> 
@@ -38,14 +38,9 @@
       </div>
     </div>
     <div class="card-creator">
-      <img class="card-avatar" src="./images/image-avatar.png">
+      <img class="card-avatar" src="./images/image-avatar.png" alt="NFT creator avatar">
       <p class="card-creator">Creation of <a href="#" class="card-creator-name"> Jules Wyvern</a></p>
     </div>
-  </div>
-
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="https://github.com/grmbyrn/nft-card">Graeme Byrne</a>.
   </div>
 </body>
 </html>
